manifests/app/base/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  annotations:
    app.openshift.io/connects-to: server
  labels:
    app: client
    app.kubernetes.io/name: client
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: client
    app.openshift.io/runtime: nodejs
    app.kubernetes.io/part-of: product-catalog
spec:
  selector:
    matchLabels:
      name: client
  replicas: 1
  template:
    metadata:
      labels:
        name: client
    spec:
      containers:
        - name: client
          image: image-registry.openshift-image-registry.svc:5000/product-catalog/client:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
            protocol: TCP
            name: http
          volumeMounts:
          - mountPath: /opt/app-root/src/config.js
            name: config-data
            subPath: config.js
          livenessProbe:
            httpGet:
              path: /health.html
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          readinessProbe:
              httpGet:
                path: /health.html
                port: 8080
                scheme: HTTP
              timeoutSeconds: 1
              periodSeconds: 10
              successThreshold: 1
              failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      volumes:
      - configMap:
          name: client
        name: config-data
