manifests/app/base/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    app: client
    app.kubernetes.io/name: client
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: client
spec:
  ports:
  - name: http
    port: 8080
  selector:
    name: client
  sessionAffinity: None
  type: ClusterIP
