manifests/app/base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  app: productdb
  name: productdb
  labels:
    app: server
    app.kubernetes.io/name: productdb
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: productdb
    app.kubernetes.io/part-of: product-catalog
spec:
  ports:
  - name: tcp
    port: 3306
  selector:
    name: productdb
